eks/helm/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prometheus-ingress
  namespace: kube-system
spec:
  tls: 
  - hosts:
    - prometheus-helm.parity.evise-nonprod.com
    - prometheusam-helm.parity.evise-nonprod.com
    - prometheuspg-helm.parity.evise-nonprod.com
    - k8sdashboard.parity.evise-nonprod.com
    secretName: prometheus-cert 
  rules:
    - host: prometheus-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: prometheus-server
              servicePort: 80
            path: /
    - host: prometheusam-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: prometheus-alertmanager
              servicePort: 80
            path: /
    - host: prometheuspg-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: prometheus-pushgateway
              servicePort: 9091
            path: /
    - host: k8sdashboard.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: dashboard-kubernetes-dashboard
              servicePort: 443
            path: /
